examples/test/testpolicy72.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy72
  namespace: namespace251
spec:
  podSelector:
    matchLabels:
      key18: value38
      key10: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key17: value39
          key22: value40
          key44: value46
      podSelector:
        matchLabels:
          key37: value7
